# tinnova-vehicle-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: README  env.py
alembic/versions/: 20260314_0001_create_users_table.py  20260314_0002_create_vehicles_table.py
app/: main.py
app/api/: router.py
app/api/dependencies/: auth.py  services.py
app/api/routes/: auth.py  health.py  reports.py  vehicles.py
app/core/: config.py  exception_handlers.py  exceptions.py  logging.py  request_id.py  security.py
app/db/: session.py
app/db/models/: __init__.py  user.py  vehicle.py
app/enums/: role.py
app/integrations/: exchange_rate_client.py  redis_client.py
app/repositories/: user_repository.py  vehicle_repository.py
app/schemas/: auth.py  common.py  error.py  report.py  vehicle.py
app/scripts/: seed_users.py
app/services/: auth_service.py  exchange_rate_service.py  report_service.py  vehicle_service.py
app/utils/: money.py  plate.py
tests/: assertions.py  conftest.py  helpers.py
tests/e2e/: test_vehicle_flow.py
tests/integration/api/: test_auth_api.py  test_error_handling.py  test_reports.py  test_vehicles_api.py
tests/unit/integrations/: test_exchange_rate_client.py
tests/unit/repositories/: test_vehicle_repository.py  test_vehicle_repository_report.py
tests/unit/services/: test_auth_service.py  test_exchange_rate_service.py  test_report_service.py  test_vehicle_service.py  test_vehicle_service_with_exchange_rate_service.py
tests/unit/utils/: test_money.py  test_plate.py
