[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinnova-vehicle-api"
version = "0.1.0"
description = "API REST para gerenciamento de veículos com FastAPI, PostgreSQL, Redis e Alembic."
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [
  { name = "Samuel Gislon" }
]
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy",
  "alembic",
  "psycopg[binary]",
  "pydantic",
  "pydantic-settings",
  "redis",
  "httpx",
  "python-multipart",
  "pyjwt",
  "pwdlib[argon2]",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "black",
  "isort",
  "mypy",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
  "unit: testes unitários",
  "integration: testes de integração",
  "e2e: testes ponta a ponta",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2
fail_under = 80

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["app", "tests"]
combine_as_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "B",
  "UP",
  "N",
]
ignore = [
  "B008",
  "N818",
]

[tool.mypy]
python_version = "3.12"
files = ["app"]
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true
ignore_missing_imports = true
